@@ -7,4 +7,4 @@ RUN mvn package
 FROM openjdk:11-jdk-slim
 WORKDIR /voovan
 COPY --from=maven /voovan/target/voovan-bench-0.1-jar-with-dependencies.jar app.jar
-CMD ["java", "-server", "-XX:+UseParallelGC", "-XX:+UseNUMA","-Djdk.attach.allowAttachSelf=true", "-cp", "./config:voovan.jar:app.jar", "org.voovan.VoovanTFB"]
+CMD ["java", "-server", "-XX:+UseParallelGC", "-XX:+UseNUMA", "--illegal-access=warn", "-Djdk.attach.allowAttachSelf=true", "-cp", "./config:voovan.jar:app.jar", "org.voovan.VoovanTFB"]
